# RaeburnAI-Executive

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  codeql.yml
apps/api/: pyproject.toml
apps/api/raeburnai_executive/: briefing.py  config.py  connectors.py  logging_config.py  main.py  models.py  security.py
apps/api/tests/: test_api.py  test_briefing.py
apps/web/: package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx  styles.css
docs/: ARCHITECTURE.md  AUDIT.md  DEPLOYMENT.md  SCREENSHOTS.md
examples/: demo-data.json  request.json
tests/e2e/: smoke.sh
