[build-system]
requires = ["setuptools==70.3.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raeburnai-executive-api"
version = "0.1.0"
description = "Executive briefing and decision support API for RaeburnAI Executive"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.14",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "python-dateutil==2.9.0.post0",
  "httpx==0.27.2",
  "python-json-logger==2.0.7"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-asyncio==0.23.8",
  "ruff==0.5.7",
  "mypy==1.11.1",
  "bandit==1.7.9"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["raeburnai_executive*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
